Upgrade errorprone and pmd static analyzers