@@ -320,7 +320,7 @@ public final class NodeFactoryGenerator {
     Set<Feature> parentFeatures;
     Set<Feature> generateFeatures;
     if (features.size() == 2) {
-      parentFeatures = ImmutableSet.of();
+      parentFeatures = Set.of();
       generateFeatures = features;
       superClass = TypeName.OBJECT;
     } else {
