@@ -30,7 +30,6 @@ import com.github.benmanes.caffeine.cache.simulator.policy.Policy.KeyOnlyPolicy;
 import com.github.benmanes.caffeine.cache.simulator.policy.Policy.PolicySpec;
 import com.github.benmanes.caffeine.cache.simulator.policy.PolicyStats;
 import com.google.common.base.MoreObjects;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.primitives.Ints;
 import com.typesafe.config.Config;
 import com.typesafe.config.ConfigFactory;
@@ -410,7 +409,7 @@ public final class FeedbackWindowTinyLfuPolicy implements KeyOnlyPolicy {
       return config().getDouble("feedback-window-tiny-lfu.adaptive-fpp");
     }
     public Config filterConfig(int sampleSize) {
-      Map<String, Object> properties = ImmutableMap.of(
+      Map<String, Object> properties = Map.of(
           "membership.fpp", adaptiveFpp(),
           "maximum-size", sampleSize);
       return ConfigFactory.parseMap(properties).withFallback(config());
